--- a/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Color.cs" />
     <Compile Include="TaskAdd.cs" />
     <Compile Include="DetailPage.cs" />
     <Compile Include="Main.cs" />
