アプリ内で使うデータをData.csに集めた

--- a/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Color.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="TaskAdd.cs" />
     <Compile Include="DetailPage.cs" />
     <Compile Include="Main.cs" />
