Imageを拡張したCheckBoxImageを作成。 タップによって画像を切り替え、それをTaskDataのプロパティとバインディングできるようにした

--- a/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Color.cs" />
     <Compile Include="Data.cs" />
+    <Compile Include="ExpandedView.cs" />
     <Compile Include="TaskAdd.cs" />
     <Compile Include="DetailPage.cs" />
     <Compile Include="Main.cs" />
