RoundProgressBarRendererを別のファイルに分離

--- a/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
@@ -104,9 +104,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BicoloredBoxViewRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundProgressBarRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
