--- a/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
@@ -17,7 +17,7 @@
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
     <AndroidSupportedAbis>armeabi,armeabi-v7a,x86</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
@@ -104,11 +104,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BicoloredBoxViewRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoundProgressBarRenderer.cs" />
+    <Compile Include="Notification_Android.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -127,6 +126,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SukimaNote\SukimaNote.csproj">
       <Name>SukimaNote</Name>
+      <Project>{402A020C-77EF-460D-AB90-DCA4890AAEF1}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
