iOSのアイコンを設定。

--- a/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
@@ -92,11 +92,11 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="RoundProgressBarRenderer.cs" />
+    <ITunesArtwork Include="iTunesArtwork%402x" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <ITunesArtwork Include="iTunesArtwork" />
-    <ITunesArtwork Include="iTunesArtwork@2x" />
     <None Include="packages.config" />
     <Compile Include="Notification_iOS.cs" />
   </ItemGroup>
@@ -114,13 +114,11 @@
     <BundleResource Include="Resources\Default%402x.png" />
     <BundleResource Include="Resources\Icon-60%402x.png" />
     <BundleResource Include="Resources\Icon-60%403x.png" />
-    <BundleResource Include="Resources\Icon-76.png" />
     <BundleResource Include="Resources\Icon-76%402x.png" />
-    <BundleResource Include="Resources\Icon-Small-40.png" />
+    <BundleResource Include="Resources\Icon-76.png" />
+    <BundleResource Include="Resources\Icon-Small%402x.png" />
     <BundleResource Include="Resources\Icon-Small-40%402x.png" />
     <BundleResource Include="Resources\Icon-Small-40%403x.png" />
-    <BundleResource Include="Resources\Icon-Small.png" />
-    <BundleResource Include="Resources\Icon-Small%402x.png" />
     <BundleResource Include="Resources\Icon-Small%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
@@ -161,9 +159,8 @@
     <BundleResource Include="Resources\checkB.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\AppIcon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
+    <BundleResource Include="Resources\Icon-Small-40.png" />
+    <BundleResource Include="Resources\Icon-Small.png" />
     <BundleResource Include="Resources\x.png" />
   </ItemGroup>
   <ItemGroup>
