--- a/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote/SukimaNote.csproj
@@ -39,7 +39,7 @@
     <Compile Include="Data.cs" />
     <Compile Include="ExpandedView.cs" />
     <Compile Include="TaskAdd.cs" />
-    <Compile Include="DetailPage.cs" />
+    <Compile Include="Setting.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskView.cs" />
