--- a/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
@@ -175,6 +175,18 @@
   <ItemGroup>
     <BundleResource Include="Resources\setting.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pencil1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pencil2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\taskList.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\sukimaNote.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
