NFLabelRendererのクラス変数に、あらかじめフォントを生成しておくことで、フォントで重くなることを改善した。

--- a/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.Droid/SukimaNote.Droid.csproj
@@ -116,7 +116,7 @@
     <Compile Include="RoundProgressBarRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\syunkasyuuotuBB.ttf" />
+    <AndroidAsset Include="Assets\syunkasyuutouBB.ttf" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
