--- a/SukimaNote/SukimaNote/SukimaNote.iOS/Info.plist
+++ b/SukimaNote/SukimaNote/SukimaNote.iOS/Info.plist
@@ -10,7 +10,7 @@
 	<key>UIAppFonts</key>
     <array>
       <string>Fonts/FontAwesome.otf</string>
-      <string>Fonts/segmdl2.ttf</string>
+      <string>Fonts/syunkasyuutou.ttf</string>
     </array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
