--- a/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
+++ b/SukimaNote/SukimaNote/SukimaNote.iOS/SukimaNote.iOS.csproj
@@ -103,7 +103,7 @@
     <ITunesArtwork Include="iTunesArtwork" />
     <None Include="packages.config" />
     <Compile Include="Notification_iOS.cs" />
-    <BundleResource Include="Resources\syunkasyuuotuBB.ttf" />
+    <BundleResource Include="Resources\syunkasyuutouBB.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SukimaNote\SukimaNote.csproj">
